force-app/main/default/objects/vlocity_ps__RuleAssignment__c/fields/vlocity_ps__HeaderId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__HeaderId__c</fullName>
    <formula>vlocity_ps__RuleId__r.vlocity_ps__HeaderId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HeaderId</label>
    <type>Text</type>
</CustomField>