force-app/main/default/objects/vlocity_ps__RuleAssignment__c/fields/vlocity_ps__RuleType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__RuleType__c</fullName>
    <formula>TEXT(vlocity_ps__RuleId__r.vlocity_ps__RuleType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Type</label>
    <type>Text</type>
</CustomField>